code: implementing hardware FIFO counter and major VHDL refactor

--- a/ip_repo/fifo_ctrl_1.0/drivers/fifo_ctrl_1.0/src/Makefile
+++ b/ip_repo/fifo_ctrl_1.0/drivers/fifo_ctrl_1.0/src/Makefile
@@ -16,7 +16,7 @@ LIBSOURCES=*.c
 OUTS = *.o
 OBJECTS =	$(addsuffix .o, $(basename $(wildcard *.c)))
 libs:
-	echo "Compiling fifo_controller"
+	echo "Compiling fifo_ctrl"
 	$(COMPILER) $(COMPILER_FLAGS) $(EXTRA_COMPILER_FLAGS) $(INCLUDES) $(LIBSOURCES)
 	$(ARCHIVER) -r ${RELEASEDIR}/${LIB} ${OUTS}
 	make clean
