--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
+language: python
+python:
+- 3.6
+install:
+- pip install sphinx sphinx_rtd_theme sphinx-argparse recommonmark
+- pip install -r requirements.txt
+
 addons:
   apt:
     - doxygen
