--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
 
 scripts:
 - cd docs/
+- mkdir build && mkdir build/c build/hdl
 - doxygen Doxyfile_c
 - doxygen Doxyfile_hdl
 - make html
