--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 
 scripts:
 - cd docs/
-- mkdir build && mkdir build/c build/hdl
+- mkdir build && mkdir build/html && mkdir build/html/c build/html/hdl
 - doxygen Doxyfile_c
 - doxygen Doxyfile_hdl
 - make html
