--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ scripts:
 deploy:
   provider: pages:git
   email: sami@dahoux.net
-  local_dir: docs/build/html
+  local_dir: build/html
   github_token: $GH_PAGES_TOKEN
   keep_history: true
   edge: true
