--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ deploy:
   local_dir: docs/build/html
   github_token: $GH_PAGES_TOKEN
   keep_history: true
-  edge: true
+  skip_cleanup: true
   on:
     branch: master
